--- a/Apps/fv2db/fv2db.ini
+++ b/Apps/fv2db/fv2db.ini
@@ -1,8 +1,12 @@
 [Location]
 ID=-1   
 
+[MongoDB]
+URL=http://localhost:5000/events
+Token=3460cc1ea4f8c3c579cd24d37b21c2c5e7c3dbae
+
 [Videosource]
-Stream=rtsp://admin:4321@10.0.48.200/onvif/profile2/media.smp
+Stream=
 Localdevice=-1
 
 [Videoprops]
@@ -12,10 +16,10 @@ Height=360
 FPS=30
 
 [Facerecognition]
-ApiURL=http://webservices.nes.lan/facerec/api/v1.0/identify 
+ApiURL=http://webservices.maximus.lan/facerec/api/v1.0/identify 
 
 [Facetracking]
-Maxfaces=7
+Maxfaces=11
 FaceHSize=170
 FaceVSize=226
 FaceHPortion=1.5
@@ -23,7 +27,6 @@ FaceVPortion=2.0
 
 [Miscellaneous]
 Visualization=false
-Saveimagewithprediction=true
 
 [Slack]
 ChannelID=
