integration with mongodb through Eve tested

--- a/Apps/fv2db/fv2db.ini
+++ b/Apps/fv2db/fv2db.ini
@@ -1,5 +1,5 @@
 [Location]
-ID=-1   
+ViewspotID=   
 
 [MongoDB]
 URL=http://localhost:5000/events
@@ -19,7 +19,7 @@ FPS=30
 ApiURL=http://webservices.maximus.lan/facerec/api/v1.0/identify 
 
 [Facetracking]
-Maxfaces=11
+Maxfaces=7
 FaceHSize=170
 FaceVSize=226
 FaceHPortion=1.5
