fix to start logic

--- a/Apps/fv2db/fv2db.ini
+++ b/Apps/fv2db/fv2db.ini
@@ -1,5 +1,5 @@
 [Location]
-ViewspotID=   
+ViewspotID=Office   
 
 [MongoDB]
 URL=http://localhost:5000/events
@@ -22,8 +22,8 @@ ApiURL=http://webservices.maximus.lan/facerec/api/v1.0/identify
 Maxfaces=7
 FaceHSize=170
 FaceVSize=226
-FaceHPortion=1.5
-FaceVPortion=2.0
+FaceHPortion=1.35
+FaceVPortion=1.75
 
 [Miscellaneous]
 Visualization=false
